--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "vite-template-solid",
   "version": "0.0.0",
-  "description": "",
+  "description": "MASS: Monitoring, Analysis and Service System",
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
-  "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
@@ -26,8 +25,11 @@
     "vite-plugin-solid": "^2.6.1"
   },
   "dependencies": {
+    "@alenaksu/json-viewer": "^2.0.0",
     "@solid-primitives/storage": "^1.3.7",
+    "axios": "^1.3.4",
     "solid-app-router": "^0.4.2",
+    "solid-forms": "^0.4.8",
     "solid-js": "^1.6.12"
   }
 }
