--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite"],
+    // "types": ["vite/client", "node"],
     "noEmit": true,
     "isolatedModules": true
   }
