--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.3.4",
     "solid-app-router": "^0.4.2",
     "solid-forms": "^0.4.8",
-    "solid-js": "^1.6.13"
+    "solid-js": "^1.6.13",
+    "tw-elements": "1.0.0-beta1"
   }
 }
