--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "jsxImportSource": "solid-js",
     // "types": ["vite/client", "node"],
     "noEmit": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noImplicitAny": false
   }
 }
