--- a/package.json
+++ b/package.json
@@ -9,28 +9,29 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.35.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint": "^8.41.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-solid": "^0.10.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vite-plugin-solid": "^2.6.1"
+    "vite": "^4.3.8",
+    "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
-    "@alenaksu/json-viewer": "^2.0.0",
-    "@solid-primitives/storage": "^1.3.7",
-    "axios": "^1.3.4",
+    "@alenaksu/json-viewer": "^2.0.1",
+    "@solid-primitives/storage": "^1.3.11",
+    "@solidjs/router": "^0.8.2",
+    "axios": "^1.4.0",
     "solid-app-router": "^0.4.2",
     "solid-forms": "^0.4.8",
-    "solid-js": "^1.6.13",
+    "solid-js": "^1.7.5",
     "tw-elements": "1.0.0-beta1"
   }
 }
